<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/main_screen_content_background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_weather_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_view_marginStartEnd"
        android:layout_marginTop="@dimen/card_view_marginTop"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        android:elevation="@dimen/card_view_elevation"
        app:layout_constraintTop_toBottomOf="@id/tb_main_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cv_humidity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_weather_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_view_content_padding">
            <ImageView
                android:id="@+id/iv_weather_type"
                android:layout_width="@dimen/identification_image_size"
                android:layout_height="@dimen/identification_image_size"
                android:contentDescription="@string/cd_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/snowflake" />
            <TextView
                android:id="@+id/tv_label_weather_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_weather_type"
                android:layout_marginStart="@dimen/card_text_margin_start"
                android:textSize="@dimen/label_text_size"
                android:text="@string/lbl_weather_type"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/tv_value_weather_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_weather_type"
                android:layout_marginStart="@dimen/card_text_margin_start"
                android:textSize="@dimen/value_text_size"
                tools:text="snow"
                android:textStyle="italic"
                android:textColor="@color/secondary_text"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_humidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_view_marginStartEnd"
        android:layout_marginTop="@dimen/card_view_marginTop"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        android:padding="@dimen/card_view_content_padding"
        android:elevation="@dimen/card_view_elevation"
        app:layout_constraintTop_toBottomOf="@id/tb_main_toolbar"
        app:layout_constraintStart_toEndOf="@id/cv_weather_type"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_humidity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_view_content_padding">
            <ImageView
                android:id="@+id/iv_humidity"
                android:layout_width="@dimen/identification_image_size"
                android:layout_height="@dimen/identification_image_size"
                android:contentDescription="@string/cd_image"
                android:src="@drawable/humidity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_label_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_humidity"
                android:layout_marginStart="@dimen/card_text_margin_start"
                android:textSize="@dimen/label_text_size"
                android:text="@string/lbl_humidity"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/tv_value_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_humidity"
                android:layout_marginStart="@dimen/card_text_margin_start"
                android:textSize="@dimen/value_text_size"
                tools:text="humid"
                android:textStyle="italic"
                android:textColor="@color/secondary_text"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_view_marginStartEnd"
        android:layout_marginTop="@dimen/card_view_marginTop"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        android:padding="@dimen/card_view_content_padding"
        android:elevation="@dimen/card_view_elevation"
        app:layout_constraintTop_toBottomOf="@id/cv_weather_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cv_wind">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_temperature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_view_content_padding">
            <ImageView
                android:id="@+id/iv_temperature"
                android:layout_width="@dimen/identification_image_size"
                android:layout_height="@dimen/identification_image_size"
                android:contentDescription="@string/cd_image"
                android:src="@drawable/temperature"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_label_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_temperature"
                android:layout_marginStart="@dimen/card_text_margin_start"
                android:textSize="@dimen/label_text_size"
                android:text="@string/lbl_temperature"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/tv_value_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_temperature"
                android:layout_marginStart="@dimen/card_text_margin_start"
                android:textSize="@dimen/value_text_size"
                android:textStyle="italic"
                android:textColor="@color/secondary_text"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_wind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_view_marginStartEnd"
        android:layout_marginTop="@dimen/card_view_marginTop"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        android:padding="@dimen/card_view_content_padding"
        android:elevation="@dimen/card_view_elevation"
        app:layout_constraintTop_toBottomOf="@id/cv_humidity"
        app:layout_constraintStart_toEndOf="@id/cv_temperature"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_wind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_view_content_padding">
            <ImageView
                android:id="@+id/iv_wind"
                android:layout_width="@dimen/identification_image_size"
                android:layout_height="@dimen/identification_image_size"
                android:contentDescription="@string/cd_image"
                android:src="@drawable/wind"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_label_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_wind"
                android:layout_marginStart="@dimen/card_text_margin_start"
                android:textSize="@dimen/label_text_size"
                android:text="@string/lbl_wind"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/tv_value_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_wind"
                android:layout_marginStart="@dimen/card_text_margin_start"
                android:textSize="@dimen/value_text_size"
                tools:text="lots"
                android:textStyle="italic"
                android:textColor="@color/secondary_text"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_location_sun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_view_marginStartEnd"
        android:layout_marginTop="@dimen/card_view_marginTop"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        android:padding="@dimen/card_view_content_padding"
        android:elevation="@dimen/card_view_elevation"
        app:layout_constraintTop_toBottomOf="@id/cv_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_location_sun"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_view_content_padding">
            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="@dimen/identification_image_size"
                android:layout_height="@dimen/identification_image_size"
                android:contentDescription="@string/cd_image"
                android:src="@drawable/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_value_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/v_separator"
                app:layout_constraintStart_toEndOf="@+id/iv_location"
                android:layout_marginStart="@dimen/card_text_margin_start"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                tools:text="Lebbeke"
                android:textColor="@color/primary_text"/>
            <View
                android:id="@+id/v_separator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_margin="@dimen/divider_margin"
                app:layout_constraintTop_toBottomOf="@id/iv_location"
                android:background="@color/divider_background"/>
            <ImageView
                android:id="@+id/iv_sun_up"
                android:layout_width="@dimen/identification_image_size"
                android:layout_height="@dimen/identification_image_size"
                android:layout_marginVertical="@dimen/divider_margin"
                app:layout_constraintTop_toBottomOf="@id/v_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_sun_down"
                android:contentDescription="@string/cd_image"
                android:src="@drawable/sunrise" />
            <ImageView
                android:id="@+id/iv_sun_down"
                android:layout_width="@dimen/identification_image_size"
                android:layout_height="@dimen/identification_image_size"
                android:layout_marginVertical="@dimen/divider_margin"
                app:layout_constraintTop_toBottomOf="@id/v_separator"
                app:layout_constraintStart_toEndOf="@id/iv_sun_up"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/cd_image"
                android:src="@drawable/sunset" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>